--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
-    "lib": [
-      "dom",
-      "es6",
-      "es2017",
-      "esnext.asynciterable"
-    ],
+    "module": "ESNext",
+    "lib": [ "es6", "es2017" ],
     "sourceMap": true,
     "outDir": "./dist",
+    "declarationDir": "./dist",
     "declaration": true,
     "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
+    "skipLibCheck": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -32,6 +29,6 @@
     "node_modules"
   ],
   "include": [
-    "./src/**/*.ts"
+    "./src"
   ]
 }
